test/TestSuite/Scheduler/Errors/task_depend_multi.tjp
project test "Test" "1.0" 2007-04-01 +2m

task t1 "T1" {
	start ${projectstart}
  duration 1d
}

task t2 "T2" {
# MARK: error 8 task_depend_multi	
	depends t1, t1
}

